had to shorten the multi-search dropdown, increase spacing in the edit/create forms and rearrange form fields to prevent multi-search dropdowns showing up behind other multisearch anchors. fixes #803

--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -178,7 +178,7 @@ table.edit-create td {
 
 table.edit-create th, 
 table.edit-create td {
-    padding: 5px;
+    padding: 10px;
     border: none;
 }
 
