--- a/media/css/multisearch.css
+++ b/media/css/multisearch.css
@@ -56,7 +56,7 @@
     position:absolute;
     left:0px;
     top:0px;
-    height:200px;
+    height:170px;
     border:1px solid silver;
     background:white;
     z-index:3;
